--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <header class="header">
       <img src="./eisenhower-matrix.jpg" alt="image of the Eisenhower matrix">
       <h1>Todo App</h1>
-      <a class="link-for-more-information" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="link-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="centered-main-page-element">
-      <section id="top-section-for-adding-element-to-list">
+    <main class="main">
+      <section id="top-section">
         <h2>
           <label for="new-task">Add Item</label>
         </h2>
-        <div class="task-row-wrapper">
+        <div class="task-wrapper">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
