--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <header class="aaa">
       <img src="./eisenhower-matrix.jpg" alt="image of the Eisenhower matrix">
       <h1>Todo App</h1>
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="centered-main-page-element">
-      <section id="topsectionforaddingelementtolist">
+      <section id="top-section-for-adding-element-to-list">
         <h2>
           <label for="new-task">Add Item</label>
         </h2>
@@ -23,7 +23,7 @@
       </section>
       <section>
         <h2>Todo</h2>
-        <ul id="incompletetasks">
+        <ul id="incomplete-tasks">
           <li>
             <input type="checkbox">
             <label class="task">Pay Bills</label>
@@ -33,7 +33,7 @@
               <img src="./remove.svg" alt="button to delete item">
             </button>
           </li>
-          <li class="editmode">
+          <li class="edit-mode">
             <input type="checkbox">
             <label class="task">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task">
