refactor: rename unmeaningful naming to rule 3.2 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <header class="aaa">
+    <header class="header">
       <img src="./eisenhower-matrix.jpg" alt="image of the Eisenhower matrix">
       <h1>Todo App</h1>
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="link-for-more-information" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="centered-main-page-element">
       <section id="top-section-for-adding-element-to-list">
